# manta-crypto

./: Cargo.toml  FILE_TEMPLATE  README.md  build.rs
.github/workflows/: check.yml
src/: checksum.rs  commitment.rs  constants.rs  ecies.rs  errors.rs  lib.rs  merkle_tree.rs  param.rs  serdes.rs  tests.rs  zkp.rs
