[package]
name = "manta-crypto"
version = "3.0.0"
authors = ["Manta Network <contact@manta.network>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/Manta-Network/manta-crypto"
description = "The underlying cryptographic primitives for Manta Ecosystem"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# Arkworks dependencies
ark-ed-on-bls12-381 = { version = "0.2.0", default-features = false, features = [ "r1cs" ] }
ark-bls12-381 = { version = "0.2.0", default-features = false, features = [ "curve" ] }
ark-crypto-primitives = { version = "0.2.0", default-features = false, features = [ "r1cs" ] }
ark-std = { version = "0.2.0", default-features = false }
ark-groth16 = { version = "0.2.0", default-features = false, features = [ "r1cs" ] }
ark-r1cs-std = { version = "0.2.0", default-features = false }
ark-serialize = { version = "0.2.0", default-features = false, features = [ "derive" ] }

# Additional cryptography dependencies
aes = { version = "0.7.0", default-features = false }
x25519-dalek = { version = "1.1.0", default-features = false, features = [ "u64_backend" ] }
generic-array = { version = "0.14.0", default-features = false }
blake2 = { version = "0.9.1", default-features = false }


[dev-dependencies]
rand_chacha = { version = "0.2", default-features = false }

[features]
default = [ "std" ]
std = [ ]
